# PA2-Programming-and-Algorithmics-2

./: .gitignore  README.md
big_hw/: .gitignore  CCell.cpp  CCell.h  CMakeLists.txt  CPos.h  CRect.cpp  CRect.h  CSpreadsheet.h  CStackExpressionBuilder.h  Cpos.cpp  Makefile  README.md  expression.h  main.cpp
big_hw/assets/: .gitignore  combine.sh  progtest.cpp  solution.cpp
big_hw/src/: CAST.cpp  CAST.h  CASTExpressionBuilder.cpp  CASTExpressionBuilder.h  CASTNode.cpp  CASTNode.h  CCell.cpp  CCell.h  CExprBuilder.h  CLoader.cpp  CLoader.h  CPos.cpp  CPos.h  CRect.cpp  CSpreadsheet.cpp  CSpreadsheet.h  CStackExpressionBuilder.cpp  CStackExpressionBuilder.h  CycleDetectionVisitor.cpp  ExpressionParser.h
big_hw/src/ExpressionBuilder/: CASTExpressionBuilder.cpp  CASTExpressionBuilder.h
big_hw/src/ExpressionBuilders/: CASTExpressionBuilder.cpp  CASTExpressionBuilder.h  CExprBuilder.h
big_hw/src/ExpressionBuilders/ASTNodes/: BinaryOperationNode.cpp  BinaryOperationNode.h  CASTNode.cpp  CASTNode.h  FunctionNode.cpp  FunctionNode.h  RelationalOperationNode.cpp  RelationalOperationNode.h  UnaryOperationNode.cpp  UnaryOperationNode.h
big_hw/src/ExpressionBuilders/CycleDetectionVisitor/: CCycleDetectionVisitor.h
big_hw/src/InputOutputUtilities/: CLoader.cpp  CLoader.h
big_hw/src/SpreadsheetStructure/: CCell.cpp  CCell.h  CPos.cpp  CPos.h  CRange.cpp  CRange.h
big_hw/src/assets/: progt.sh  solution.cpp
big_hw/tests/: Tester.h
hw01/: README.md  main.cpp
hw02/: README.md  main.cpp
hw03/: README.md  main.cpp
hw04/: README.md  main.cpp
hw05/: README.md  main.cpp
hw06/: README.md  main.cpp
